--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
           <a class="nav-link" href="SampleReportForm.html">New Sample Submission Form</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="department.html">New Sample Submission Form</a>
+          <a class="nav-link" href="department.html">Departments</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="Users.html">All Users</a>
