--- a/Samples.html
+++ b/Samples.html
@@ -35,7 +35,7 @@
           <a class="nav-link" href="SampleReportForm.html">New Sample Submission Form</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Department.html">Departments</a>
+          <a class="nav-link" href="department.html">Departments</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="Users.html">All Users</a>
