--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
           <a class="nav-link" href="department.html">Departments</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Users.html">All Users</a>
+          <a class="nav-link" href="users.html">All Users</a>
         </li>
       </ul>
     </div>
