--- a/department.html
+++ b/department.html
@@ -31,10 +31,10 @@
             <a class="nav-link" href="SampleReportForm.html">New Sample Submission Form</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Department.html">Departments</a>
+            <a class="nav-link" href="department.html">Departments</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Users.html">All Users</a>
+            <a class="nav-link" href="users.html">All Users</a>
           </li>
         </ul>
       </div>
