--- a/department.html
+++ b/department.html
@@ -47,10 +47,10 @@
       <table class="table">
         <thead>
           <tr>
-            <td>Patient Name</td>
-            <td>Test Type</td>
-            <td>Collected</td>
-            <td>Result</td>
+            <td><b>Patient Name</b></td>
+            <td><b></b>Test Type</b></td>
+            <td><b></b>Collected</b></td>
+            <td><b></b>Result</b></td>
            
           </tr>
         </thead>
