--- a/department.html
+++ b/department.html
@@ -42,15 +42,15 @@
   
   <body style="background-color: #c7bcbc98;">  
     <div class="container">
-      <h1 style="text-align: center;">Lab Results</h1>
+      <h3 style="text-align: center;">Lab Results</h1>
       
       <table class="table">
         <thead>
           <tr>
             <td><b>Patient Name</b></td>
-            <td><b></b>Test Type</b></td>
-            <td><b></b>Collected</b></td>
-            <td><b></b>Result</b></td>
+            <td><b>Test Type</b></td>
+            <td><b>Collected</b></td>
+            <td><b>Result</b></td>
            
           </tr>
         </thead>
