--- a/department.html
+++ b/department.html
@@ -42,7 +42,7 @@
   
   <body style="background-color: #c7bcbc98;">  
     <div class="container">
-      <h3 style="text-align: center;">Lab Results</h1>
+      <h3 style="text-align: center;">Broken</h3>
       
       <table class="table">
         <thead>
